Add chessInitGame.ods and test_chessOdsDataReaderWriter.py

--- a/chessTools/chessConfig.yaml
+++ b/chessTools/chessConfig.yaml
@@ -4,3 +4,4 @@
     'numbers': "12345678"
   'paths':
     'chessCurrentGameTable': "/chessOds/chessCurrentGameTable.ods"
+    'chessInitGameTable': "/chessOds/chessInitGameTable.ods"
