--- a/chessTools/chessConfig.yaml
+++ b/chessTools/chessConfig.yaml
@@ -1,4 +1,5 @@
 'chess_config':
+  'main_window_name': "game_process"
   'cameras':
     'windows':
       'internal_camera': "USB\\VID_04CA&PID_709D\\5&831DF12&0&4"
